plugins {
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.moviefy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

configurations {
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'org.modelmapper:modelmapper:3.2.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
    implementation 'me.paulschwarz:spring-dotenv:3.0.0'

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
    testImplementation 'com.maciejwalkowiak.spring:wiremock-spring-boot:2.1.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}